tests/expected_invalid_parse_missing_block_close_before_decl.diag.out
<input>:5:1: error: expected statement or expression inside block
    public fn after() -> Int {
    ^^^^^^
<input>:5:8: error: expected statement or expression inside block
    public fn after() -> Int {
           ^^
<input>:5:19: error: expected statement or expression inside block
    public fn after() -> Int {
                      ^^
